/***********************************************************************
X3 ChangeLog

2008-12-27  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/chanserv.c: SF feature 2353198. Patch from CaptKirk. Added
	the channel flag to the register command. Also removed the
	helping flag.

2008-12-27  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/hash.c: SF feature 2353183. Made X3 aware of +a.

	* src/hash.h: SF feature 2353183. Made X3 aware of +a.

2008-12-27  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/global.c: Added RCHANNELS which will send notices to all
	registered channels. Also changed CHANNELS to notice all channels
	instead of registered ones only.

	* src/global.h: Added RCHANNELS.

	* src/global.help: Added RCHANNELS target.

2008-12-27  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/global.c: Added AUTHED target.

	* src/global.h: Added AUTHED target.

2008-12-27  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/opserv.c: Store when alerts were last triggered.

2008-12-27  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* x3.conf.example: Added valid_channel_regex.

	* src/chanserv.c: Added valid_channel_regex.

2008-12-25  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/chanserv.c: Warning fixes.

	* src/proto-p10.c: Warning fixes.

2008-12-25  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* configure: Regenerated.

	* configure.in: Added math.h check.

	* rx/Makefile.in: Regenerated.

	* src/chanserv.c: Warning fixes.

	* src/config.h.in: Regenerated.
	
	* src/Makefile.in: Regenerated.

	* src/math.c: Warning fixes.

	* src/nickserv.c: Warning fixes.

	* src/opserv.c: Warning fixes.
 
	* src/proto-p10.c: Warning fixes.

2008-12-24  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/chanserv.c: Fix for SF bug #2423717. Invalid automode choices
	with a string will now show the invalid string rather than 0.

2008-12-24  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/nickserv.c: Fix for SF bug #2420339. Password change emails